# Final-project

./: .gitignore  README.md  Readme.md  _quarto.yml  app.py  explore_cleaned.ipynb  explore_fema.ipynb  explore_ncei.ipynb  explore_ncei_fixed.ipynb  explore_usgs.ipynb  index.qmd  ncei_earthquakes_2000_2024.csv  pyproject.toml  readme.html  reference.qmd  report.qmd  tutorial.qmd  usgs_earthquakes_2023_Q1.csv
docs/: _quarto.yml  index.html  index.qmd  reference.html  report.html  report.qmd  search.json  tutorial.html  tutorial.qmd
docs/_site/: index.html  report.html
earthquake_analysis/: __init__.py  analyze.py  clean.py  fetch.py  merge.py
quakewatch-package-clean 2/: .gitignore  README.md  app.py  pyproject.toml
quakewatch-package-clean 2/.github/workflows/: ci.yml  deploy_docs.yml
quakewatch-package-clean 2/quakewatch/: __init__.py  analyze.py  clean.py  fetch.py  merge.py
quakewatch-package-clean 2/scripts/: clean_data.py
quakewatch-package-clean 2/tests/: __init__.py  test_analyze.py  test_clean.py  test_merge.py
scripts/: run_pipeline.py
