[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "quakewatch"
version = "0.1.0"
description = "Analyze global earthquake patterns and real-world impact"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "streamlit>=1.30",
    "folium>=0.15",
    "streamlit-folium>=0.18",
]

[project.optional-dependencies]
dev = ["pytest>=7", "black", "flake8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["quakewatch*"]
